Terraform/EKS/Kops8/security-group.tf
resource "aws_security_group" "kops_sg" {
  name   = "kops-cluster-sg"
  vpc_id = data.aws_vpc.existing.id

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"] 
  }


  tags = {
    Name = "alb-sg"
  }
}

resource "aws_security_group_rule" "alb_outbound_https" {
  type              = "egress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_sec.kops_sg
  description       = "Allow outbound HTTPS access to internet"
}
